Updated contact form to create user message entity

--- a/Web/Restaurant.Web/Views/Home/Contact.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Contact.cshtml
@@ -1,6 +1,10 @@
 ﻿@using Restaurant.Common
+@using Restaurant.Web.ViewModels.InputModels
+@model UserMessageInputModel
 @{
     this.ViewData["Title"] = "Contacts";
+    var categories = this.Model.Categories.Select(x => new SelectListItem(x.Name, x.Id.ToString()));
+
 }
 
 <partial name="_HeroPartial" />
@@ -43,26 +47,37 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
+                                    <input asp-for="Name" class="form-control">
+                                    <label asp-for="Name"></label>
+                                    <span asp-validation-for="Name"></span>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
+                                    <input asp-for="Email" class="form-control">
+                                    <label asp-for="Email"></label>
+                                    <span asp-validation-for="Email"></span>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
+                                    <input asp-for="Subject" class="form-control">
+                                    <label asp-for="Subject"></label>
+                                    <span asp-validation-for="Subject"></span>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
-                                    <label for="message">Message</label>
+                                    <select asp-for="UserMessageCategoryId" class="form-select" asp-items="categories"></select>
+                                    <label asp-for="UserMessageCategoryId"> Choose a category</label>
+                                    <span asp-validation-for="UserMessageCategoryId" ></span>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea asp-for="Description" class="form-control" style="height: 150px"></textarea>
+                                    <label asp-for="Description"></label>
+                                    <span asp-validation-for="Description"></span>
                                 </div>
                             </div>
                             <div class="col-12">
