--- a/Web/Restaurant.Web/Views/Cart/Index.cshtml
+++ b/Web/Restaurant.Web/Views/Cart/Index.cshtml
@@ -34,13 +34,13 @@
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
                                     <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-minus" onclick="ChangeQuantity('cartItemContainer@(cartItem.Meal.Id)')">
+                                        <button class="btn btn-sm btn-primary btn-minus" onclick="ChangeCartItemQuantity('cartItemContainer@(cartItem.Meal.Id)')">
                                             <i class="fa fa-minus btn-minus"></i>
                                         </button>
                                     </div>
                                     <input type="text" class="form-control form-control-sm bg-white text-center" asp-for="@cartItem.Quantity" disabled>
                                     <div class="input-group-btn">
-                                        <button class="btn btn-sm btn-primary btn-plus" onclick="ChangeQuantity('cartItemContainer@(cartItem.Meal.Id)')">
+                                        <button class="btn btn-sm btn-primary btn-plus" onclick="ChangeCartItemQuantity('cartItemContainer@(cartItem.Meal.Id)')">
                                             <i class="fa fa-plus btn-plus"></i>
                                         </button>
                                     </div>
@@ -98,100 +98,7 @@
     </div>
 </div>
 
-<script>
-    function ChangeQuantity(id) {
-
-        var mealId = id.substring(17);
-        var cartItemContainer = document.getElementById(id);
-        var quantity = cartItemContainer.querySelector('input').value;
-
-        var button = event.srcElement;
-
-        if (button.classList.contains('btn-plus')) {
-
-            quantity++;
-
-            if(quantity <= 100){
-            }
-        }
-        else {
-
-            quantity--;
-
-            if(quantity >= 1){
-            }
-        }
-
-        const data =
-        {
-            mealId: mealId,
-            quantity: quantity
-        };
-
-        $.ajax({
-            url: '/Cart/ChangeQuantity',
-            type: 'POST',
-            data: JSON.stringify(data),
-            contentType: 'application/json',
-            success: function (result, status, xhr) {
-                if (xhr.status === 200) {
-                    var jsonResult = JSON.parse(xhr.responseText);
-
-                    cartItemContainer.querySelector('input').setAttribute('value', jsonResult.quantity);
-                    $("#cartSubTotalBtn").html('<i class="fa-solid fa-cart-shopping"></i> ' + jsonResult.cartSubTotal + ' $');
-                    $("#cartSubTotalCard").html(jsonResult.cartSubTotal + ' $');
-                    $("#cartItemTotalPrice" + mealId).html(jsonResult.itemTotalPrice + ' $');
-                    $("#cartTotalPrice").html(jsonResult.cartTotalPrice + ' $');
-                }
-            },
-            error: function(xhr){
-                 $("#modalLabel").text('Oops!');
-                 var errors = JSON.parse(xhr.responseText);
-                 for (var i = 0; i < errors.length; i++) {
-                    $("#modalBody").append('<li class="text-danger">' + errors[i] + '</li>')
-                 }
-
-                $("#exampleModal").modal('show')
-            }
-        });
-
-        $("#btnCloseModal").click(function () {
-            $("#exampleModal").modal("hide");
-            $("#modalBody").text('');
-        });
-    }
-
-    function RemoveFromCart(id) {
-
-        var mealId = id.substring(17);
-
-        const data =
-        {
-            mealId: mealId,
-        };
-
-        $.ajax({
-            url: '/Cart/RemoveFromCart',
-            type: 'POST',
-            data: JSON.stringify(data),
-            contentType: 'application/json',
-            success: function (result, status, xhr) {
-                if (xhr.status === 200) {
-                    var itemPrice = Number.parseFloat($("#cartItemTotalPrice" + mealId).text());
-
-
-                    var cartSubTotalBtn = Number.parseFloat($("#cartSubTotalBtn").text());
-                    console.log(cartSubTotalBtn);
-                    var cartSubTotalCard = Number.parseFloat($("#cartSubTotalCard").text());
-                    var cartTotal = Number.parseFloat($("#cartTotalPrice").text());
-
-
-                    $("#cartSubTotalBtn").html('<i class="fa-solid fa-cart-shopping"></i> ' + (cartSubTotalBtn - itemPrice).toFixed(2) + ' <i class="fas fa-dollar-sign"></i>');
-                    $("#cartSubTotalCard").html((cartSubTotalCard - itemPrice).toFixed(2) + ' <i class="fas fa-dollar-sign"></i>');
-                    $("#cartTotalPrice").html((cartTotal - itemPrice).toFixed(2) + ' <i class="fas fa-dollar-sign"></i>');
-                    $("#" + id).remove();
-                }
-            }
-        });
-    }
-</script>
+@section Scripts
+{
+    <script src="~/js/site.js" asp-append-version="true"></script>
+}
