--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -135,7 +135,7 @@
 
 
     <!-- Template Javascript -->
-    <script src="~/js/main.js"></script>
+    <script src="~/js/main.js" asp-append-version="true"></script>
 
 
     @await this.RenderSectionAsync("Scripts", required: false)
