--- a/Web/Restaurant.Web/Views/Shared/_PagingPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_PagingPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagingViewModel
+﻿@model IPagingViewModel
 <nav aria-label="...">
     <ul class="pagination justify-content-center">
         <li class="page-item @if (!Model.HasPreviousPage) { <text>disabled</text> }">
