Refactoring - Review controllers and views
Changed the logic of the index method of both Review controllers to use the new PagedItemsModelCreator and PagedItemsViewModel.

--- a/Web/Restaurant.Web/Areas/Administration/Views/Review/Index.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/Review/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Restaurant.Web.ViewModels.Review
-@model AdminReviewListViewModel
+@model PagedItemsViewModel<AdminReviewViewModel>
 @{
     ViewData["Title"] = "Index";
 }
@@ -45,7 +45,7 @@
         </tr>
     </thead>
     <tbody class="table-light">
-        @foreach (var review in Model.Reviews)
+        @foreach (var review in Model.Items)
         {
             <tr>
                 <td>
