--- a/Web/Restaurant.Web/Areas/Administration/Views/_ViewImports.cshtml
+++ b/Web/Restaurant.Web/Areas/Administration/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Restaurant.Web
 @using Restaurant.Web.ViewModels
+@using Restaurant.Web.ViewModels.Paging
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Restaurant.Web
