--- a/Web/AdminDashboard/AdminDashboard.Web/Views/Home/Index.cshtml
+++ b/Web/AdminDashboard/AdminDashboard.Web/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@using Microsoft.AspNetCore.Identity
+@using AdminDashboard.Data.Models;
+@inject SignInManager<AdminDashboardUser> SignInManager
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@{
+    this.ViewData["Title"] = "Dashboard";
+}
+@if (!SignInManager.IsSignedIn(User))
+{
+    <h1>In order to access the admin dashboard, please <a asp-area="Identity" asp-page="/Account/Login">login</a></h1>
+}
+else
+{
+    <div class="container-xxl py-5">
+        <div class="container text-center">
+            <div class="row g-4">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item rounded pt-3">
+                        <div class="p-4">
+                            <p>Manage meals</p>
+                            <a class="btn btn-dark" asp-controller="Meal" asp-action="All" asp-route-id="1">Meals</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item rounded pt-3">
+                        <div class="p-4">
+                            <p>Manage orders</p>
+                            <a class="btn btn-dark" asp-controller="Order" asp-action="All" asp-route-id="1">Orders</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="service-item rounded pt-3">
+                        <div class="p-4">
+                            <p>Manage reservations</p>
+                            <a class="btn btn-dark" asp-controller="Reservation" asp-action="All" asp-route-id="1">Reservations</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="service-item rounded pt-3">
+                        <div class="p-4">
+                            <p>Manage reviews</p>
+                            <a class="btn btn-dark" asp-controller="Review" asp-action="All" asp-route-id="1">Reviews</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
