--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -8,26 +8,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicon -->
-    <link href="~/images/favicon.ico" rel="icon" asp-append-version="true">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" asp-append-version="true">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin asp-append-version="true">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&family=Pacifico&display=swap" rel="stylesheet" asp-append-version="true">
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" asp-append-version="true">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" asp-append-version="true">
-
-    <!-- Libraries Stylesheet -->
-    <link href="~/lib/animate/animate.min.css" rel="stylesheet" asp-append-version="true">
-    <link href="~/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" asp-append-version="true">
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">
-
-    <!-- Template Stylesheet -->
-    <link href="~/css/style.css" rel="stylesheet" asp-append-version="true">
+    <partial name="_StylesPartial" />
 </head>
 <body>
     <!-- Spinner Start -->
@@ -37,108 +18,16 @@
         </div>
     </div>
     <!-- Spinner End -->
-    <div class="container-xxl position-relative p-0">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-            <partial name="_SelectLanguagePartial" />
-            <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Gourmet experience</h1>
-                <!-- <img src="img/logo.png" alt="Logo"> -->
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="fa fa-bars"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto py-0 pe-4">
-                    <a class="nav-item nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <a class="nav-item nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
-                    <a class="nav-item nav-link" asp-area="" asp-controller="Menu" asp-action="Index">Menu</a>
-                    <a class="nav-item nav-link" asp-area="" asp-controller="Reservation" asp-action="Book">Book a table</a>
-                    <partial name="_LoginPartial" />
-                </div>
-                <vc:cart-total></vc:cart-total>
-            </div>
+    <partial name="_NavigationPartial" />
 
-        </nav>
-
-    </div>
     <div class="container">
         <main role="main" class="pb-3">
             @this.RenderBody()
         </main>
     </div>
 
-
-    <!-- Footer Start -->
-
-    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-xxl-4 col-md-4">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Company</h4>
-                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
-                    <a class="btn btn-link" asp-area="" asp-controller="Review" asp-action="All" asp-route-id="1">Customer reviews</a>
-                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact us</a>
-                    <a class="btn btn-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy policy</a>
-                </div>
-                <div class="col-xxl-4 col-md-4">
-                    <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> ul. "Han Asparuh" 37, 1000 Sofia Center, Sofia.</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+359 123 456 789</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                <div class="col-xxl-4 col-md-4">
-                    <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Working hours</h5>
-                    <h6 class="text-light fw-normal">Monday - Sunday</h6>
-                    <p>09:00 - 23:00</p>
-                    <h5 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Delivery hours</h5>
-                    <h6 class="text-light fw-normal">Monday - Sunday</h6>
-                    <p>12:00 -00:00</p>
-                </div>
-
-            </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Gourmet experience</a>, All Right Reserved.
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-                        Distributed By <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-    </div>
-    <!-- Footer End -->
-
-    <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
-    <script src="~/js/site.min.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" asp-append-version="true"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
-    <script src="~/lib/wow/wow.min.js" asp-append-version="true"></script>
-    <script src="~/lib/easing/easing.min.js" asp-append-version="true"></script>
-    <script src="~/lib/waypoints/waypoints.min.js" asp-append-version="true"></script>
-    <script src="~/lib/counterup/counterup.min.js" asp-append-version="true"></script>
-    <script src="~/lib/owlcarousel/owl.carousel.min.js" asp-append-version="true"></script>
-    <script src="https://kit.fontawesome.com/1405e59552.js" asp-append-version="true" crossorigin="anonymous" data-auto-replace-svg="nest"></script>
-
-
-
-    <!-- Template Javascript -->
-    <script src="~/js/main.js" asp-append-version="true"></script>
-
-
+    <partial name="_FooterPartial" />
+    <partial name="_ScriptsPartial" />
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
