--- a/Web/Restaurant.Web/Views/Home/About.cshtml
+++ b/Web/Restaurant.Web/Views/Home/About.cshtml
@@ -1,5 +1,10 @@
-﻿@{
-    this.ViewData["Title"] = "About us";
+﻿@using Restaurant.Web.HelperClasses
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer L
+@inject ISharedViewLocalizer SL
+
+@{
+    this.ViewData["Title"] = SL["ABOUT_US"];
 }
 
 <partial name="_HeroPartial" />
@@ -24,16 +29,16 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-primary me-2"></i>Restoran</h1>
-                <p class="mb-4">Our restaurant strives to source local, sustainable and organic at all times. We work hard to source premium ingredients and we cook everything from scratch with love.</p>
-                <p class="mb-4">We also do our best to pay our employees living wages (tips are shared with all employees, including kitchen staff) and to reduce our environmental footprint wherever we can. Overall, these factors translate to higher menu prices, but we hope that you find value and feel a sense of comfort in knowing that we aim to get better everyday at doing what is important to us.</p>
+                <h1 class="mb-4">@L["WELCOME_TO"] <i class="fa fa-utensils text-primary me-2"></i>@SL["GOURMET_EXPERIENCE"]</h1>
+                <p class="mb-4">@L["ABOUT_OUR_MISSION"]</p>
+                <p class="mb-4">@L["ABOUT_OUR_POLICY_FIRST"] @L["ABOUT_OUR_POLICY_SECOND"]</p>
                 <div class="row g-4 mb-4">
                     <div class="col-sm-6">
                         <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                             <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">15</h1>
                             <div class="ps-4">
-                                <p class="mb-0">Years of</p>
-                                <h6 class="text-uppercase mb-0">Excellence</h6>
+                                <p class="mb-0">@L["YEARS_OF"]</p>
+                                <h6 class="text-uppercase mb-0">@L["EXCELLENCE"]</h6>
                             </div>
                         </div>
                     </div>
@@ -41,8 +46,8 @@
                         <div class="d-flex align-items-center border-start border-5 border-primary px-3">
                             <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">32</h1>
                             <div class="ps-4">
-                                <p class="mb-0">Incredible</p>
-                                <h6 class="text-uppercase mb-0"> dishes</h6>
+                                <p class="mb-0">@L["INCREDIBLE"]</p>
+                                <h6 class="text-uppercase mb-0">@L["DISHES"]</h6>
                             </div>
                         </div>
                     </div>
@@ -51,14 +56,13 @@
         </div>
     </div>
 </div>
-<!-- About End -->
 
 <!-- Team Start -->
 <div class="container-xxl pt-5 pb-3">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h5 class="section-title ff-secondary text-center text-primary fw-normal">Team Members</h5>
-            <h1 class="mb-5">Our Master Chefs</h1>
+            <h5 class="section-title ff-secondary text-center text-primary fw-normal">@L["TEAM_MEMBERS"]</h5>
+            <h1 class="mb-5">@L["MASTER_CHEFS"]</h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
