Code readability improvements
Removing unnecessary usings from views
Adding the injection of IViewLocalizer and ISharedViewLocalizer to _ViewImports as they are to be used in multiple views

--- a/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AddAddress.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.Address
+﻿@using Restaurant.Web.ViewModels.Address
 @model AddressViewModel
 @{
     this.ViewData["Title"] = "Add a new address";
