--- a/Web/Restaurant.Web/Views/Home/Contact.cshtml
+++ b/Web/Restaurant.Web/Views/Home/Contact.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.InputModels
+﻿@using Restaurant.Web.ViewModels.InputModels
 @model UserMessageInputModel
 @{
     this.ViewData["Title"] = "Contacts";
