--- a/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
+++ b/Web/Restaurant.Web/Views/Menu/AllMeals.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.Menu
+﻿@using Restaurant.Web.ViewModels.Menu
 @model MenuViewModel
 @{
     this.ViewData["Title"] = "Menu";
