--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.Reservation
+﻿@using Restaurant.Web.ViewModels.Reservation
 @model ReservationListViewModel
 @{
     this.ViewData["Title"] = "My bookings";
