--- a/Web/Restaurant.Web/Views/Reservation/Success.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/Success.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.Reservation
+﻿@using Restaurant.Web.ViewModels.Reservation
 @model ReservationViewModel
 @{
     this.ViewData["Title"] = "Your reservation";
