--- a/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AllReviews.cshtml
@@ -1,4 +1,4 @@
-﻿@using Restaurant.Common
+﻿@using Restaurant.Web.ViewModels.Paging
 @using Restaurant.Web.ViewModels.Review
 @model PagedItemsViewModel<ReviewViewModel>
 
