--- a/Web/Restaurant.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Data.Models
+﻿@using Restaurant.Data.Models
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
