--- a/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
+++ b/Web/Restaurant.Web/Views/Address/AllAddresses.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.Address
+﻿@using Restaurant.Web.ViewModels.Address
 @model AddressViewModel
 @{
     this.ViewData["Title"] = "Your addresses";
