--- a/Web/Restaurant.Web/Views/Review/AddReview.cshtml
+++ b/Web/Restaurant.Web/Views/Review/AddReview.cshtml
@@ -1,5 +1,4 @@
-﻿@using Restaurant.Common
-@using Restaurant.Web.ViewModels.InputModels
+﻿@using Restaurant.Web.ViewModels.InputModels
 @model AddReviewInputModel
 
 @{
