--- a/Web/Restaurant.Web/Views/_ViewImports.cshtml
+++ b/Web/Restaurant.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
-﻿@using Restaurant.Web
-@using Restaurant.Web.ViewModels
-@using Restaurant.Web.ViewModels.Paging
+﻿@using Restaurant.Web.HelperClasses
+@using Microsoft.AspNetCore.Mvc.Localization
+
+@inject IViewLocalizer L
+@inject ISharedViewLocalizer SL
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Restaurant.Web
