UI bug fixes and improvements
Fixed padding in razor pages layout as well as login and register pages
Added white background and shadow to the mvc layout
Removed the scroll function of the navbar and made it permanently sticky top

--- a/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
     <!-- Spinner End -->
     <partial name="_NavigationPartial" />
 
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container p-0 bg-white shadow-lg">
+        <main role="main">
             @this.RenderBody()
         </main>
     </div>
