--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 <partial name="_HeroPartial" />
 
-<div class="row">
+<div class="row p-3">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
