--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -15,7 +15,7 @@
 <div>
     <h4>Change your account settings</h4>
     <hr />
-    <div class="row">
+    <div class="row p-3">
         <div class="col-md-3">
             <partial name="_ManageNav" />
         </div>
