--- a/Web/Restaurant.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Restaurant.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,7 +7,7 @@
 <partial name="_HeroPartial" />
 
 
-<div class="row">
+<div class="row p-3">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
