--- a/Web/Restaurant.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/Web/Restaurant.Web/Views/Shared/_NavigationPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container-xxl position-relative p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
+    <nav class="navbar navbar-expand-xl navbar-dark sticky-top shadow-lg bg-dark px-4 px-5 py-3 py-0">
         <partial name="_SelectLanguagePartial" />
         <a href="" class="navbar-brand p-0">
             <h1 class="text-primary m-0"><i class="fa fa-utensils me-3"></i>Gourmet experience</h1>
