--- a/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
+++ b/Web/Restaurant.Web/Views/Reservation/AllReservations.cshtml
@@ -7,74 +7,71 @@
 <partial name="_HeroPartial" />
 
 <div class="row g-4 wow fadeInUp" data-wow-delay="0.1s">
-    @foreach (var reservation in Model.Reservations)
-    {
-        <div class="card offset-xl-1 col-md-10 border-3 border-dark wow fadeInUp" data-wow-delay="0.1s">
-            <div class="row d-flex">
-                <div class="d-flex flex-column">
-                    <table class="table table-borderless table-hover">
-                        <tr class="bg-primary">
-                            <td>
-                                <div align="left"> <span class="text-white fs-2 font-weight-bold">Reservation number</span> </div>
-                            </td>
-                            <td>
-                                <div align="right"> <span class="text-white fs-2 font-weight-bold">@reservation.ReservationNumber</span> </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div align="left"> <span class="text-muted fs-3"><i class="fas fa-calendar-alt fs-3"></i> Reservation date</span> </div>
-                            </td>
-                            <td>
-                                <div align="right"> <span class="text-muted fs-3">@reservation.ReservationDate.ToLocalTime()</span> </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div align="left"> <span class="text-muted fs-3"><i class="fas fa-hashtag fs-3"></i> Table №</span> </div>
-                            </td>
-                            <td>
-                                <div align="right"> <span class="text-muted fs-3">@reservation.TableId</span> </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <div align="left"> <span class="text-muted fs-3"><i class="fas fa-users"></i> Table for</span> </div>
+    <div class="row">
+        @foreach (var reservation in Model.Reservations)
+        {
 
-                            </td>
-                            <td>
-                                <div align="right"> <span class="text-muted fs-3">@($"{reservation.NumberOfPeople} people")</span> </div>
-                            </td>
-                        </tr>
-
-                        <tr class="border-top border-bottom border-secondary">
-                            <td>
-                                <div align="left"> <span class="font-weight-bold"><i class="fas fa-user"></i> Name</span> </div>
-                            </td>
-                            <td>
-                                <div align="right"> <span class="font-weight-bold">@reservation.Fullname</span> </div>
-                            </td>
-                        </tr>
-                        <tr class="border-top border-bottom border-secondary">
-                            <td>
-                                <div align="left"> <span class="font-weight-bold"><i class="fas fa-envelope"></i> Email</span> </div>
-                            </td>
-                            <td>
-                                <div align="right"> <span class="font-weight-bold">@reservation.Email</span> </div>
-                            </td>
-                        </tr>
-                        <tr class="border-top border-bottom border-primary">
-                            <td>
-                                <div align="left"> <span class="font-weight-bold"><i class="fas fa-phone-square"></i> Phone number</span> </div>
-                            </td>
-                            <td>
-                                <div align="right"> <span class="font-weight-bold">@reservation.PhoneNumber</span> </div>
-                            </td>
-                        </tr>
-                    </table>
+            <div class="col-xl-6 p-5">
+                <div class="card border-3 border-dark bg-body wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="card-header bg-dark">
+                        <div class="row">
+                            <div class="col-lg-6 ps-lg-5 ">
+                                <h5 class="text-white card-text">Reservation number</h5>
+                            </div>
+                            <div class="col-lg-6 ps-lg-5">
+                                <h3 class="card-text font-weight-bold text-white mt-2">@reservation.ReservationNumber</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body bg-white">
+                        <div class="row">
+                            <i class="fas fa-calendar-alt fs-1 pe-2 text-primary col-1 p-1"></i>
+                            <div class="col-11">
+                                <span class="ps-1 fs-5">Booked date</span>
+                                <h6 class="m-1">@reservation.ReservationDate.ToLocalTime()</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-hashtag fs-1 pe-2 text-primary col-1 p-1"></i>
+                            <div class="col-11">
+                                <span class="ps-1 fs-5">Table number</span>
+                                <h6 class="m-1">@reservation.TableId</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-users fs-2 pe-2 text-primary col-1 p-1"></i>
+                            <div class="col-11">
+                                <span class="ps-1 fs-5">Table for</span>
+                                <h6 class="ps-1">@($"{reservation.NumberOfPeople} people")</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer bg-white align-items-center">
+                        <div class="row">
+                            <i class="fas fa-user fs-1 pe-2 text-primary col-1 p-1"></i>
+                            <div class="col-11">
+                                <span class="ps-1 fs-5">Name</span>
+                                <h6 class="m-1">@reservation.Fullname</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-phone-square fs-1 pe-2 text-primary col-1 p-1"></i>
+                            <div class="col-11">
+                                <span class="ps-1 fs-5">Phone</span>
+                                <h6 class="m-1">@reservation.PhoneNumber</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope fs-1 pe-2 text-primary col-1 p-1"></i>
+                            <div class="col-11">
+                                <span class="ps-1 fs-5">Email</span>
+                                <h6 class="ps-1">@reservation.Email</h6>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    }
+        }
+    </div>
 </div>
 
